# zktool

./: Cargo.toml  README.md
fixtures/: proof.json  public.json  vkey.json
src/: main.rs  verifier_utils.rs
src/commands/: claim.rs  command.rs  mod.rs  verify.rs
