[package]
name = "zktool"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
clap = { version = "4.2.1", features = ["env", "derive"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
primitive-types = "0.13.1"
anyhow = "1.0.98"
regex = "1.11.1"
